[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latencycalc"
version = "0.1.0"
description = "A tool to measure audio latency for ASIO devices"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sounddevice>=0.4.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/nicola-lunghi/latencycalc"
Repository = "https://github.com/nicola-lunghi/latencycalc"
Issues = "https://github.com/nicola-lunghi/latencycalc/issues"

[project.scripts]
latencycalc = "latencycalc_entry:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "bump2version>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["latencycalc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
